// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card snapshot > Card demo snapshot 0 1`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: rgb(238, 238, 238); padding: 20px;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; width: 270px;"
    >
      <div
        class="bui-card"
        style="width: 100%;"
      >
        <div
          class="bui-card-header"
        >
          <div
            class="bui-card-header-title"
          >
            <div>
              项目 Alpha
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card snapshot > Card demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: rgb(238, 238, 238); padding: 20px;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; width: 270px;"
    >
      <div
        class="bui-card"
        style="width: 100%;"
      >
        <div
          class="bui-card-header"
        >
          <div
            class="bui-card-header-subtitle"
          >
            最近更新：2024-04-29
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card snapshot > Card demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: rgb(238, 238, 238); padding: 20px;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; width: 270px;"
    >
      <div
        class="bui-card"
        style="width: 100%;"
      >
        <div
          class="bui-card-header"
        >
          <div
            class="bui-card-header-title"
          >
            项目 Alpha
          </div>
          <div
            class="bui-card-header-subtitle"
          >
            最近更新：2024-04-29
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card snapshot > Card demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: rgb(238, 238, 238); padding: 20px;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; width: 270px;"
    >
      <div
        class="bui-card"
        style="width: 100%;"
      >
        <div
          class="bui-card-header"
        >
          <div
            class="bui-card-header-title"
          >
            最近订单
          </div>
          <div
            class="bui-card-header-extra"
          >
            查看全部
          </div>
          <div
            class="bui-card-header-end-icon"
          >
            <svg
              class="bui-svg-icon icon-size-small"
              color="var(--bui-color-fg-disabled)"
              focusable="false"
              viewBox="0 0 96 96"
            >
              <path
                d="M55.1 48 32.3 26.9c-1.6-1.5-1.7-4-.2-5.7 1.5-1.6 4-1.7 5.7-.2l26 24c1.7 1.6 1.7 4.3 0 5.9l-26 24c-1.6 1.5-4.2 1.4-5.7-.2-1.5-1.6-1.4-4.2.2-5.7l22.8-21z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card snapshot > Card demo snapshot 0 5`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: rgb(238, 238, 238); padding: 20px;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; width: 270px;"
    >
      <div
        class="bui-card"
        style="width: 100%;"
      >
        <div
          class="bui-card-header"
        >
          <div
            class="bui-card-header-title"
          >
            最近订单
          </div>
          <div
            class="bui-card-header-extra"
          >
            查看全部
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card snapshot > Card demo snapshot 0 6`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: rgb(238, 238, 238); padding: 20px;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; width: 270px;"
    >
      <div
        class="bui-card"
        style="width: 100%;"
      >
        <div
          class="bui-card-content"
        >
          <div>
            订单号：7a73fcggert235fag4
          </div>
          <div>
            物流单号：SF1204056789
          </div>
          <div>
            手机号：134****5427
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card snapshot > Card demo snapshot 0 7`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: rgb(238, 238, 238); padding: 20px;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; width: 270px;"
    >
      <div
        class="bui-card"
        style="width: 100%;"
      >
        <div
          class="bui-card-header"
        >
          <div
            class="bui-card-header-title"
          >
            订单详情
          </div>
        </div>
        <div
          class="bui-card-content"
        >
          <div>
            订单号：7a73fcggert235fag4
          </div>
          <div>
            物流单号：SF1204056789
          </div>
          <div>
            手机号：134****5427
          </div>
        </div>
        <div
          class="bui-card-footer"
        >
          <button
            class="bui-btn bui-btn-outlined bui-btn-medium bui-btn-success"
            type="button"
          >
            确认收货
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card snapshot > Card demo snapshot 0 8`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: rgb(238, 238, 238); padding: 20px;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; width: 270px;"
    >
      <div
        class="bui-card"
        style="width: 100%;"
      >
        <div
          class="bui-card-header"
        >
          <div
            class="bui-card-header-title"
          >
            订单详情
          </div>
        </div>
        <div
          class="bui-card-content"
        >
          <div>
            订单号：7a73fcggert235fag4
          </div>
          <div>
            物流单号：SF1204056789
          </div>
          <div>
            手机号：134****5427
          </div>
        </div>
        <div
          class="bui-card-footer"
        >
          <button
            class="bui-btn bui-btn-outlined bui-btn-medium bui-btn-success"
            type="button"
          >
            确认收货
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card snapshot > Card demo snapshot 0 9`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: rgb(238, 238, 238); padding: 20px;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; width: 270px;"
    >
      <div
        class="bui-card"
        style="width: 100%;"
      >
        <div
          class="bui-card-header"
        >
          <div
            class="bui-card-header-title"
          >
            我的订单
          </div>
        </div>
        <div
          class="bui-card-content"
        >
          <div
            class="bui-card"
            style="width: 100%;"
          >
            <div
              class="bui-card-header"
            >
              <div
                class="bui-card-header-title"
              >
                电子产品
              </div>
              <div
                class="bui-card-header-extra"
              >
                共 6 件
              </div>
              <div
                class="bui-card-header-end-icon"
              >
                <svg
                  class="bui-svg-icon icon-size-small"
                  color="var(--bui-color-fg-disabled)"
                  focusable="false"
                  viewBox="0 0 96 96"
                >
                  <path
                    d="M55.1 48 32.3 26.9c-1.6-1.5-1.7-4-.2-5.7 1.5-1.6 4-1.7 5.7-.2l26 24c1.7 1.6 1.7 4.3 0 5.9l-26 24c-1.6 1.5-4.2 1.4-5.7-.2-1.5-1.6-1.4-4.2.2-5.7l22.8-21z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="bui-card-content"
            >
              <div>
                无线鼠标 × 2
              </div>
              <div>
                机械键盘 × 1
              </div>
              <div>
                USB-C 扩展坞 × 3
              </div>
            </div>
          </div>
          <div
            class="bui-card subCard"
          >
            <div
              class="bui-card-header"
            >
              <div
                class="bui-card-header-title"
              >
                办公用品
              </div>
              <div
                class="bui-card-header-extra"
              >
                共 14 件
              </div>
              <div
                class="bui-card-header-end-icon"
              >
                <svg
                  class="bui-svg-icon icon-size-small"
                  color="var(--bui-color-fg-disabled)"
                  focusable="false"
                  viewBox="0 0 96 96"
                >
                  <path
                    d="M55.1 48 32.3 26.9c-1.6-1.5-1.7-4-.2-5.7 1.5-1.6 4-1.7 5.7-.2l26 24c1.7 1.6 1.7 4.3 0 5.9l-26 24c-1.6 1.5-4.2 1.4-5.7-.2-1.5-1.6-1.4-4.2.2-5.7l22.8-21z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="bui-card-content"
            >
              <div>
                A4 打印纸 × 2
              </div>
              <div>
                便利贴 × 2
              </div>
              <div>
                中性笔 × 10
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card snapshot > Card demo snapshot 0 10`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; background: rgb(238, 238, 238); padding: 20px;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 0; --flex-wrap: nowrap; width: 270px;"
    >
      <div
        class="bui-card"
        style="padding: 10px;"
      >
        <div>
          产品规格
        </div>
        <div>
          材质：100% 纯棉
        </div>
        <div>
          认证：ISO 9001
        </div>
      </div>
    </div>
  </div>
</div>
`;
